--- a/European-Voters-Analysis.ipynb
+++ b/European-Voters-Analysis.ipynb
@@ -43,7 +43,9 @@
    "id": "announced-robertson",
    "metadata": {},
    "source": [
-    "## Introduction"
+    "<a id=\"1\"></a> <br>\n",
+    "<font size=\"+3\" color=\"black\"><b>1 - Introduction</b></font><br><a id=\"1\"></a>\n",
+    "<br> "
    ]
   },
   {
@@ -51,7 +53,11 @@
    "id": "banned-solid",
    "metadata": {},
    "source": [
-    "There is a R package for the ESS project which allows download data [essurvey](https://docs.ropensci.org/essurvey/)"
+    "This report will investigated a dataset provided by [European Social Survey](https://www.europeansocialsurvey.org/) (ESS) which is a biennial cross-national survey of attitudes and behaviour from European citizens.\n",
+    "\n",
+    "The study will focus on which aspects can influence for a person to vote for your country leave or remain a member of the European Union. After analyzing each variable individually I will build a model that after been trained can predict the probability on a person to vote for your country to Leave the European Union.\n",
+    "\n",
+    "There is a R package for the ESS project which allows download data. R-pakacge: [essurvey](https://docs.ropensci.org/essurvey/)"
    ]
   },
   {
@@ -264,6 +270,16 @@
    ],
    "source": [
     "show_rounds()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "synthetic-ancient",
+   "metadata": {},
+   "source": [
+    "<a id=\"2\"></a> <br>\n",
+    "<font size=\"+3\" color=\"black\"><b>2 - Dataset</b></font><br><a id=\"2\"></a>\n",
+    "<br> "
    ]
   },
   {
