Add Survey Weight references

--- a/European-Voters-Analysis.ipynb
+++ b/European-Voters-Analysis.ipynb
@@ -33,7 +33,7 @@
     "  <h1 class=\"list-group-item list-group-item-action active\" data-toggle=\"list\"  role=\"tab\" aria-controls=\"home\">&nbsp;Table of Contents:</h1>\n",
     "  <a class=\"list-group-item list-group-item-action\" data-toggle=\"list\" href=\"#1\" role=\"tab\" aria-controls=\"profile\">1. Introduction<span class=\"badge badge-primary badge-pill\">1</span></a>\n",
     "  <a class=\"list-group-item list-group-item-action\" data-toggle=\"list\" href=\"#2\" role=\"tab\" aria-controls=\"messages\">2. Data Cleaning & Wrangling<span class=\"badge badge-primary badge-pill\">2</span></a>\n",
-    "   <a class=\"list-group-item list-group-item-action\" data-toggle=\"list\" href=\"#3\" role=\"tab\" aria-controls=\"messages\">3. Survey Weight<span class=\"badge badge-primary badge-pill\">3</span></a>\n",
+    "   <a class=\"list-group-item list-group-item-action\" data-toggle=\"list\" href=\"#3\" role=\"tab\" aria-controls=\"messages\">3. Survey Weights<span class=\"badge badge-primary badge-pill\">3</span></a>\n",
     "   <a class=\"list-group-item list-group-item-action\" data-toggle=\"list\" href=\"#4\" role=\"tab\" aria-controls=\"messages\">4. Data Exploration<span class=\"badge badge-primary badge-pill\">4</span></a>    <a class=\"list-group-item list-group-item-action\" data-toggle=\"list\" href=\"#5\" role=\"tab\" aria-controls=\"messages\">5. Previous Iterations<span class=\"badge badge-primary badge-pill\">5</span></a>\n",
     "</div>"
    ]
@@ -835,11 +835,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "innocent-affiliation",
+   "id": "frequent-method",
    "metadata": {},
    "source": [
     "<a id=\"3\"></a> <br>\n",
-    "<font size=\"+3\" color=\"black\"><b>3 - Survey Weight</b></font><br><a id=\"3\"></a>\n",
+    "<font size=\"+3\" color=\"black\"><b>3 - Survey Weights</b></font><br><a id=\"3\"></a>\n",
     "<br> "
    ]
   },
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "still-exercise",
+   "id": "thirty-civilization",
    "metadata": {},
    "source": [
     "Details about how ESS weights the data can be found [here](https://www.europeansocialsurvey.org/docs/methodology/ESS_weighting_data_1_1.pdf)."
