Update cover photo and data dictionary

--- a/European-Voters-Analysis.ipynb
+++ b/European-Voters-Analysis.ipynb
@@ -21,7 +21,15 @@
    "id": "prerequisite-wrong",
    "metadata": {},
    "source": [
-    "<img src='https://static.dezeen.com/uploads/2021/02/brexit-designers-cost-admin_dezeen_2364_col_1-2048x1152.jpg' style='height:400px'>"
+    "<img src='https://www.irishtimes.com/polopoly_fs/1.3657023.1539082433!/image/image.jpg' style='height:400px'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "seventh-effect",
+   "metadata": {},
+   "source": [
+    "Photo: The Irish Times — [BREXIT: THE FACTS](https://www.irishtimes.com/news/world/brexit/brexit-the-facts)"
    ]
   },
   {
@@ -70,75 +78,30 @@
     "- __EDUYRS__ Years of full-time education completed\n",
     "- __UEMP3M__ Ever unemployed and seeking work for a period more than three months\n",
     "- __MBTRU__ Member of trade union or similar organisation\n",
-    "- __VTEURMMB__ Would vote for your country to remain member of European Union or leave"
+    "- __VTEURMMB__ Would vote for your country to remain member of European Union or leave\n",
+    "- __GNDR__ Gender\n",
+    "- __YRBRN__  Year of birth\n",
+    "- __AGEA__ Age of respondent. Calculation based on year of birth and year of interview"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "private-cisco",
+   "id": "collected-filename",
    "metadata": {},
    "source": [
-    "EDUYRS Years of full-time education completed\n",
-    "Question:\n",
-    "All rounds: About how many years of education have you completed, whether full-time or part-time? Please report these in full-time equivalents and include compulsory years of schooling.\n",
-    "Values and categories:\n",
-    "77\tRefusal\n",
-    "88\tDon't know\n",
-    "99\tNo answer"
+    "__Questions__"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "latin-illinois",
+   "id": "equal-championship",
    "metadata": {},
    "source": [
-    "UEMP3M Ever unemployed and seeking work for a period more than three months\n",
-    "Question:\n",
-    "All rounds: Have you ever been unemployed and seeking work for a period of more than three months?\n",
-    "Values and categories:\n",
-    "1\tYes\n",
-    "2\tNo\n",
-    "7\tRefusal\n",
-    "8\tDon't know\n",
-    "9\tNo answer"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "changing-platform",
-   "metadata": {},
-   "source": [
-    "MBTRU Member of trade union or similar organisation\n",
-    "Question:\n",
-    "ESS1, ESS2, ESS3, ESS4, ESS5, ESS6, ESS7, ESS8: Are you or have you ever been a member of a trade union or similar organisation?\n",
-    "ESS9: Are you or have you ever been a member of a trade union or similar organisation? IF YES, is that currently or previously?\n",
-    "Values and categories:\n",
-    "1\tYes, currently\n",
-    "2\tYes, previously\n",
-    "3\tNo\n",
-    "7\tRefusal\n",
-    "8\tDon't know\n",
-    "9\tNo answer"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "adolescent-scene",
-   "metadata": {},
-   "source": [
-    "VTEURMMB Would vote for [country] to remain member of European Union or leave\n",
-    "Question:\n",
-    "ESS8, ESS9: Imagine there were a referendum in [country] tomorrow about membership of the European Union. Would you vote for [country] to remain a member of the European Union or to leave the European Union?\n",
-    "Values and categories:\n",
-    "1\tRemain member of the European Union\n",
-    "2\tLeave the European Union\n",
-    "33\tWould submit a blank ballot paper\n",
-    "44\tWould spoil the ballot paper\n",
-    "55\tWould not vote\n",
-    "65\tNot eligible to vote\n",
-    "77\tRefusal\n",
-    "88\tDon't know\n",
-    "99\tNo answer"
+    "**EDUYR** About how many years of education have you completed, whether full-time or part-time? Please report these in full-time equivalents and include compulsory years of schooling.\n",
+    "<br>**UEMP3M** Have you ever been unemployed and seeking work for a period of more than three months?\n",
+    "<br>**MBTRU** Are you or have you ever been a member of a trade union or similar organisation? IF YES, is that currently or previously?\n",
+    "<br>**VTEURMMB** Imagine there were a referendum in [country] tomorrow about membership of the European Union. Would you vote for [country] to remain a member of the European Union or to leave the European Union?\n",
+    "<br>**YRBRN** And in what year were you born?"
    ]
   },
   {
@@ -151,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "sudden-courage",
    "metadata": {},
    "outputs": [],
@@ -171,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "id": "southeast-sigma",
    "metadata": {},
    "outputs": [],
@@ -204,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "mental-housing",
    "metadata": {},
    "outputs": [],
@@ -214,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "attached-wales",
    "metadata": {},
    "outputs": [
@@ -299,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "id": "sustainable-voice",
    "metadata": {},
    "outputs": [],
@@ -309,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "id": "russian-savage",
    "metadata": {},
    "outputs": [
@@ -426,67 +389,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "id": "heavy-bulgaria",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       ".dl-inline {width: auto; margin:0; padding: 0}\n",
-       ".dl-inline>dt, .dl-inline>dd {float: none; width: auto; display: inline-block}\n",
-       ".dl-inline>dt::after {content: \":\\0020\"; padding-right: .5ex}\n",
-       ".dl-inline>dt:not(:first-of-type) {padding-left: .5ex}\n",
-       "</style><dl class=dl-inline><dt>cntry</dt><dd>0</dd><dt>eduyrs</dt><dd>708</dd><dt>uemp3m</dt><dd>295</dd><dt>mbtru</dt><dd>331</dd><dt>vteurmmb</dt><dd>13648</dd><dt>yrbrn</dt><dd>222</dd><dt>agea</dt><dd>222</dd><dt>gndr</dt><dd>0</dd><dt>anweight</dt><dd>0</dd><dt>psu</dt><dd>0</dd><dt>stratum</dt><dd>0</dd><dt>prob</dt><dd>0</dd><dt>dweight</dt><dd>0</dd><dt>pspwght</dt><dd>0</dd><dt>pweight</dt><dd>0</dd></dl>\n"
-      ],
-      "text/latex": [
-       "\\begin{description*}\n",
-       "\\item[cntry] 0\n",
-       "\\item[eduyrs] 708\n",
-       "\\item[uemp3m] 295\n",
-       "\\item[mbtru] 331\n",
-       "\\item[vteurmmb] 13648\n",
-       "\\item[yrbrn] 222\n",
-       "\\item[agea] 222\n",
-       "\\item[gndr] 0\n",
-       "\\item[anweight] 0\n",
-       "\\item[psu] 0\n",
-       "\\item[stratum] 0\n",
-       "\\item[prob] 0\n",
-       "\\item[dweight] 0\n",
-       "\\item[pspwght] 0\n",
-       "\\item[pweight] 0\n",
-       "\\end{description*}\n"
-      ],
-      "text/markdown": [
-       "cntry\n",
-       ":   0eduyrs\n",
-       ":   708uemp3m\n",
-       ":   295mbtru\n",
-       ":   331vteurmmb\n",
-       ":   13648yrbrn\n",
-       ":   222agea\n",
-       ":   222gndr\n",
-       ":   0anweight\n",
-       ":   0psu\n",
-       ":   0stratum\n",
-       ":   0prob\n",
-       ":   0dweight\n",
-       ":   0pspwght\n",
-       ":   0pweight\n",
-       ":   0\n",
-       "\n"
-      ],
-      "text/plain": [
-       "   cntry   eduyrs   uemp3m    mbtru vteurmmb    yrbrn     agea     gndr \n",
-       "       0      708      295      331    13648      222      222        0 \n",
-       "anweight      psu  stratum     prob  dweight  pspwght  pweight \n",
-       "       0        0        0        0        0        0        0 "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "ERROR",
+     "evalue": "Error in lapply(X = X, FUN = FUN, ...): objeto 'european_survey' não encontrado\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in lapply(X = X, FUN = FUN, ...): objeto 'european_survey' não encontrado\nTraceback:\n",
+      "1. sapply(european_survey, function(x) sum(is.na(x)))",
+      "2. lapply(X = X, FUN = FUN, ...)"
+     ]
     }
    ],
    "source": [
