Comments about complex surveys

--- a/European-Voters-Analysis.ipynb
+++ b/European-Voters-Analysis.ipynb
@@ -776,9 +776,9 @@
    "id": "cooked-bleeding",
    "metadata": {},
    "source": [
-    "The analysis of survey data often uses complex sample designs and __weighting adjustments__ in order to make the sample look more like the intended population of the survey. As ESS is a __cross-national survey__ and countries implement different sample designs, it is important to take weights in consideration to take into consideration the country context to __avoid the estimates be biased__.\n",
+    "The analysis of survey data often uses complex sample designs and __weighting adjustments__ in order to make the sample look more like the intended population of the survey. As ESS is a __cross-national survey__ and countries implement different sample designs, it is important to use weights in all analysis to take into consideration the country context, and therefore __avoid bias in the outcome__.\n",
     "\n",
-    "__Post-stratification weights__ is intended purpose is to decrease the impact of coverage, sampling and nonresponse error. In ESS is based on gender, age, education and geographical region.\n",
+    "__Post-stratification weights__ intended purpose is to decrease the impact of coverage, sampling and nonresponse error. In ESS is based on gender, age, education and geographical region.\n",
     "\n",
     "__Clustering__ produces more precise population estimates than a simple random design would achieve but this makes survey results appear more homogeneous. To address this problem ESS uses Clustering Adjustments.\n",
     "\n",
@@ -794,9 +794,19 @@
     "error related to the four post-stratification variables, and takes into account \n",
     "differences in population size across countries. \n",
     "\n",
-    "The clustering variable is called _psu_, stratification is indicated by _stratum_, and weighting by _anweight_.\n",
-    "\n",
     "Details about how ESS weights the data can be found [here](https://www.europeansocialsurvey.org/docs/methodology/ESS_weighting_data_1_1.pdf)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "severe-april",
+   "metadata": {},
+   "source": [
+    "There are 2 R packages which help us with complex surveys design: `survey` and `srvyr`\n",
+    "\n",
+    "In ESS dataset the clustering variable is _psu_, stratification is indicated by _stratum_, and weighting by _anweight_.\n",
+    "\n",
+    "`srvyr` library which is based on `survey` brings a _dplyr_ syntax-style."
    ]
   },
   {
@@ -806,8 +816,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#library(survey)\n",
-    "#library(srvyr)\n",
     "weighted_df_ess <- df_european_survey %>% as_survey_design(ids=psu, strata=stratum, weights=anweight)"
    ]
   },
@@ -818,8 +826,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Lonely PSUs - http://r-survey.r-forge.r-project.org/survey/exmample-lonely.html\n",
     "options(survey.adjust.domain.lonely=TRUE)\n",
-    "options(survey.lonely.psu=\"adjust\")"
+    "options(survey.lonesly.psu=\"adjust\")"
    ]
   },
   {
