--- a/European-Voters-Analysis.ipynb
+++ b/European-Voters-Analysis.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "noticed-marketplace",
+   "id": "external-flesh",
    "metadata": {},
    "source": [
     "### <p style=\"background-color:#003399; font-family:tahoma; font-size:120%; text-align:left; color:#FFCC00; padding: 15px 5px 15px 25px; border-radius: 15px;\">Table of Contents:</p>\n",
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "capital-triumph",
+   "id": "included-listing",
    "metadata": {},
    "source": [
     "<a id='2.1'></a>\n",
@@ -1303,7 +1303,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "accompanied-revolution",
+   "id": "based-carter",
    "metadata": {},
    "outputs": [
     {
@@ -1430,7 +1430,7 @@
     "              size = 8,\n",
     "              fontface = \"bold\") +\n",
     "    labs(x = \"\", y = \"\", fill = \"\",\n",
-    "        title = \"Unemployment overview in European Regions\",\n",
+    "        title = \"Unemployment overview on European Regions\",\n",
     "        subtitle = \"% of respondents who ever were unemployed and seeking work for a period more than three months\")+ \n",
     "    theme_minimal() + \n",
     "    theme(legend.position = \"top\", \n",
@@ -1492,6 +1492,22 @@
     "          axis.title.y = element_blank(),\n",
     "          plot.title=element_text(vjust=.5,family='', face='bold', colour='#636363', size=25),\n",
     "          plot.subtitle=element_text(vjust=.5,family='', face='bold', colour='#636363', size=15))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "conventional-magic",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "It is important to highlight __Hungary__ as presented the lowest unemployment rate of all countries studied with a unemployment rate of 13%, 8% less than the two second-better-scored countries Czechia and Slovakia. \n",
+    "\n",
+    "__Background research about Hungary's excelent performance__:\n",
+    "\n",
+    "The employment gap in Hungary has improved  in recent years, partly thanks to strong economic growth and possibly also as a result of the 2013 Job Protection Act which provides tax incentives to employers who hire people with a weak connection to the labour market. Recently, the government announced a [new labor program](http://abouthungary.hu/news-in-brief/new-labor-program-significantly-cuts-hungarys-unemployment-rate/) and according to the Minister of Finance, since 2010 around 500,000 previously inactive workers have been returned to the labor market.\n",
+    "\n"
    ]
   },
   {
