--- a/European-Voters-Analysis.ipynb
+++ b/European-Voters-Analysis.ipynb
@@ -47,7 +47,7 @@
     "    * [4.1 European Union Views](#4.1)\n",
     "    * [4.2 Gender-Age Analysis](#4.2)\n",
     "    * [4.3 Education Overview](#4.3)\n",
-    "    * [4.4 Employment Status](#4.4)\n",
+    "    * [4.4 Unemployment rate](#4.4)\n",
     "    * [4.5 Union Membership](#4.5)\n",
     "* [5. Relation between Education and Voting Intentions](#5)\n",
     "    * [5.1 Binary Logistic Regression](#5.1)\n",
@@ -1029,7 +1029,7 @@
    "id": "scientific-nepal",
    "metadata": {},
    "source": [
-    "### How is the voting intention outlook when it comes to European regions?"
+    "### How is the voting intention when it comes to European regions?"
    ]
   },
   {
@@ -1085,7 +1085,7 @@
    "id": "falling-guinea",
    "metadata": {},
    "source": [
-    "__Northern__ and __Southern__ are the european regions with the __highest EU rejection__ rate, each of them marking 14% of voting intentions to Leave the Brussels-based institution. \n",
+    "__Northern__ and __Southern__ are the European regions with the __highest EU rejection__ rate, each of them marking 14% of voting intentions to Leave the Brussels-based institution. \n",
     "\n",
     "Curiously, those regions are also home to 4 countries that have the highest voting intention to Remain. \n",
     "\n",
@@ -1286,7 +1286,7 @@
    "source": [
     "Among all levels of Education in european voters, the biggest __disparity__ is on __High Education__ which can be noted a __14 percentage point gap__. Those with more education have more positive opinions of the EU.\n",
     "\n",
-    "When it comes to citizens with voting intentions to __Leave the EU__, those with a __Medium Education level__ represent __more than 50%__ and __Low and Medium Education__ level are the vast majority representing __90%__ of those voters."
+    "When it comes to citizens with voting intentions to __Leave the EU__, those with a __Medium Education level__ represent __more then 50%__ and __Low and Medium Education__ level are the vast majority representing __90%__ of those voters."
    ]
   },
   {
@@ -1411,17 +1411,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fifteen-parker",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "boxed-knife",
    "metadata": {},
    "source": [
     "<a id='4.4'></a>\n",
-    "## Employment Status"
+    "## Unemployment rate"
    ]
   },
   {
@@ -1541,11 +1535,11 @@
    "id": "least-acrobat",
    "metadata": {},
    "source": [
-    "__Latvia and Spain__ are the only EU Contries with an __unemployment__ rate higher than __40%__. More than half (14 of 22) of countries have reported an unemployment rate between 20% and 30%.\n",
+    "__Latvia and Spain__ are the only EU Countries with an __unemployment__ rate higher than __40%__. More than half (14 of 22) of countries have reported an unemployment rate between 20% and 30%.\n",
     "\n",
     "It is important to highlight that __Hungary__ presented the lowest unemployment rate of all countries studied with a unemployment rate of 13%, 8% less than the two second-better-scored countries Czechia and Slovakia. \n",
     "\n",
-    "__Did something happen in Hungary?__ In order to understand Hungary's excelent performance, an online research was conducted.\n",
+    "__Did something happen in Hungary?__ In order to understand Hungary's excellent performance, an online research was conducted.\n",
     "\n",
     "The employment gap in Hungary has improved  in recent years, partly thanks to strong economic growth and possibly also as a result of the 2013 Job Protection Act which provides tax incentives to employers who hire people with a weak connection to the labour market. Recently, the government announced a [new labor program](http://abouthungary.hu/news-in-brief/new-labor-program-significantly-cuts-hungarys-unemployment-rate/) and according to the Minister of Finance, since 2010 around 500,000 previously inactive workers have been returned to the labor market.\n"
    ]
@@ -1752,15 +1746,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "living-indian",
+   "id": "proved-collapse",
    "metadata": {},
    "source": [
-    "In order to GLM"
+    "In __logistic regression__, the dependent variable is binary, i.e. it only contains data marked as __1 (Default)__ or __0 (No default)__. The dependent variable \"_vteurmmb_\" needs to to reflect the default 1 as the vote being to _Leave_ in order to fit the Generalized Llinear Model. For that reason an adjustment on the variable levels is needed."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "sunrise-craps",
+   "id": "governing-container",
    "metadata": {},
    "source": [
     "<a id='5.1'></a>\n",
@@ -1770,7 +1764,7 @@
   {
    "cell_type": "code",
    "execution_count": 311,
-   "id": "difficult-publication",
+   "id": "constitutional-internet",
    "metadata": {},
    "outputs": [
     {
@@ -1807,7 +1801,7 @@
   {
    "cell_type": "code",
    "execution_count": 312,
-   "id": "necessary-uzbekistan",
+   "id": "compact-mountain",
    "metadata": {
     "scrolled": true
    },
@@ -1817,9 +1811,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "boxed-cooper",
+   "metadata": {},
+   "source": [
+    "### As the years of formal education increase, the European's view towards the EU become positive or negative?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 330,
-   "id": "computational-export",
+   "id": "premium-curve",
    "metadata": {},
    "outputs": [
     {
@@ -1864,23 +1866,33 @@
   },
   {
    "cell_type": "markdown",
-   "id": "retired-special",
+   "id": "faced-railway",
    "metadata": {},
-   "source": []
+   "source": [
+    "### We can now conclude the as the years of formal education increase, the probability for a person to vote for your country to Leave the EU decreases."
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "medieval-wireless",
+   "id": "hourly-diabetes",
    "metadata": {},
    "source": [
     "<a id='5.3'></a>\n",
-    "## Predicted probability of voting to Leave the EU"
+    "## Predicted probability of voting to _Leave_ the EU"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "backed-trash",
+   "metadata": {},
+   "source": [
+    "Using the logistic regression model it is possible to get interesting insights using a __\"voter profile\"__ to predict the probability of their vote to be for Leave the EU. The selected independent variables are Unemployment Status, Union membership status and Education level."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 301,
-   "id": "competent-annotation",
+   "id": "accredited-spanking",
    "metadata": {},
    "outputs": [
     {
@@ -1920,7 +1932,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "operating-patrol",
+   "id": "chief-flight",
    "metadata": {},
    "source": [
     "__Since the p-value for all the variables <0.05, hence they are statistically significant at 95% CI.__"
@@ -1928,7 +1940,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rubber-lodge",
+   "id": "first-surge",
    "metadata": {},
    "source": [
     "### What's the probability that a person with Medium Education level, have been unemployed and is/was a Union member to vote for your country to Leave the EU?"
@@ -1937,7 +1949,7 @@
   {
    "cell_type": "code",
    "execution_count": 307,
-   "id": "creative-holiday",
+   "id": "confirmed-tourist",
    "metadata": {},
    "outputs": [
     {
@@ -1971,7 +1983,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "knowing-palace",
+   "id": "weird-stylus",
    "metadata": {},
    "source": [
     "### And what about a person with High Education level, that never has been unemployed and is not a Union member to vote for your country to Leave the EU?"
@@ -1980,7 +1992,7 @@
   {
    "cell_type": "code",
    "execution_count": 308,
-   "id": "democratic-elements",
+   "id": "surface-raising",
    "metadata": {},
    "outputs": [
     {
@@ -2014,7 +2026,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "interim-horizontal",
+   "id": "incoming-engagement",
    "metadata": {},
    "source": [
     "<a id=\"6\"></a>\n",
@@ -2023,13 +2035,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "auburn-begin",
+   "id": "blank-steal",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "excited-planning",
+   "id": "large-trouble",
    "metadata": {},
    "source": [
     "<a id=\"7\"></a>\n",
@@ -2038,7 +2050,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "valuable-prophet",
+   "id": "pharmaceutical-kitty",
    "metadata": {},
    "source": []
   },
