--- a/European-Voters-Analysis.ipynb
+++ b/European-Voters-Analysis.ipynb
@@ -1,11 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "automotive-league",
    "metadata": {},
    "source": [
-    "# <p style=\"background-color:#003399; font-family:tahoma; font-size:120%; text-align:left; color:#FFCC00; padding: 15px 5px 15px 25px; border-radius: 15px;\">Examining factors that influence in European voters.<br>Leave or remain in the European Union?</p>"
+    "# <p style=\"background-color:#003399; font-family:tahoma; font-size:120%; text-align:left; color:#FFCC00; padding: 15px 5px 15px 25px; border-radius: 15px;\">Examining factors that influence EU acceptance among European voters\n",
+    "    \n",
+    "## Would you vote for your country to leave or remain in the European Union?</p>"
    ]
   },
   {
@@ -50,13 +53,8 @@
     "    * [4.4 Unemployment rate](#4.4)\n",
     "    * [4.5 Union Membership](#4.5)\n",
     "* [5. Relation between Education and Voting Intentions](#5)\n",
-    "    * [5.1 Binary Logistic Regression](#5.1)\n",
-    "        * [5.1.1 Univariate Prophet](#5.1.1)\n",
-    "        * [5.1.2 ARIMA](#5.1.2)\n",
-    "        * [5.1.3 Auto-ARIMA](#5.1.3)\n",
-    "        * [5.1.4 LSTM](#5.1.4)\n",
-    "    * [5.2 Models for Multivariate Time Series](#5.2)\n",
-    "        * [5.1.1 Multivariate Prophet](#5.2.1)\n",
+    "    * [5.1 Logistic Regression](#5.1)\n",
+    "    * [5.2 Predicted probability of voting to Leave the EU](#5.2)\n",
     "* [6. Conclusion](#6)\n",
     "* [7. References](#7)\n"
    ]
@@ -948,7 +946,7 @@
    "id": "encouraging-professor",
    "metadata": {},
    "source": [
-    "The countries with the highest proportion of votes to leave the EU are Czechia, Italy, France, Finland and Cyprus. All of them with **more than 17%** of respondents inclined to vote for their country to **Leave the EU** on a hypothetical referendum. \n",
+    "The countries with the highest proportion of votes to leave the EU are Czechia, Italy, France, Finland and Cyprus. All of them with **more than 17%** of respondents inclined to vote for their country to **Leave the EU** in a hypothetical referendum. \n",
     "\n",
     "__Czechia and Italy__ are the only contries with __more than 20%__ of voting intentions to __Leave the EU__."
    ]
@@ -1286,7 +1284,7 @@
    "source": [
     "Among all levels of Education in european voters, the biggest __disparity__ is on __High Education__ which can be noted a __14 percentage point gap__. Those with more education have more positive opinions of the EU.\n",
     "\n",
-    "When it comes to citizens with voting intentions to __Leave the EU__, those with a __Medium Education level__ represent __more then 50%__ and __Low and Medium Education__ level are the vast majority representing __90%__ of those voters."
+    "When it comes to citizens with voting intentions to __Leave the EU__, those with a __Medium Education level__ represent __more than 50%__ and __Low and Medium Education__ level are the vast majority representing __90%__ of those voters."
    ]
   },
   {
@@ -1815,7 +1813,7 @@
    "id": "boxed-cooper",
    "metadata": {},
    "source": [
-    "### As the years of formal education increase, the European's view towards the EU become positive or negative?"
+    "### As the years of formal education increase, the Europeans view towards the EU becomes positive or negative?"
    ]
   },
   {
@@ -1869,7 +1867,7 @@
    "id": "faced-railway",
    "metadata": {},
    "source": [
-    "### We can now conclude the as the years of formal education increase, the probability for a person to vote for your country to Leave the EU decreases."
+    "Voters __Education level__ is __statistically correlated with the happiness__ about the Brussels-based institution."
    ]
   },
   {
@@ -1877,7 +1875,7 @@
    "id": "hourly-diabetes",
    "metadata": {},
    "source": [
-    "<a id='5.3'></a>\n",
+    "<a id='5.2'></a>\n",
     "## Predicted probability of voting to _Leave_ the EU"
    ]
   },
@@ -2037,7 +2035,19 @@
    "cell_type": "markdown",
    "id": "blank-steal",
    "metadata": {},
-   "source": []
+   "source": [
+    "The analysis has demonstrated that the majority of countries are happy with the EU showing 68% are in favour and 32% not so happy. Some regions have a more positive views than others and Southern european countries have more positive views towards the EU.\n",
+    "\n",
+    "Also that younger europeans are happier than older counterparts showing that only 9.5% of young citizens (ages 20 and younger) have a negative view about the EU.\n",
+    "\n",
+    "Unemployment rate was presented higher on Southern Region where countries were more affected by the debt crisis and Hungary with a new labour program was able to lower the unemployment rate at an incredible 13%. Additionally, voters that have been unenmployed are more inclined to vote for their country to Leave the EU as 40% on unhappy respondents were unemployed in comparison with 30% among happy voters.\n",
+    "\n",
+    "Union membership did not show to play an important role on influencing European voters. However, a significant discover was possible showing that Nordic countries have highest union density in Europe at 64%.\n",
+    "\n",
+    "In an Educational context, High education level is 14% higher on those with Remain voting intention. Medium Education level represent more than 50% and Low and Medium Education level are the vast majority representing 90% of those voters.\n",
+    "\n",
+    "Finally, using a Logistic Regression model to investigate the relation between Education and voting intentions, it was detected that Higher educated Europeans are generally keener on the EU which means that the probability for a European to vote for their country to leave the EU decreases as they get more educated."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2052,14 +2062,41 @@
    "cell_type": "markdown",
    "id": "pharmaceutical-kitty",
    "metadata": {},
-   "source": []
+   "source": [
+    ">Lumley, T. (2010). Complex Surveys: A Guide to Analysis Using R (1st ed.). Hoboken, New Jersey: Wiley.\n",
+    "\n",
+    ">Kaminska, O., & Lynn, P. (2017). Survey-Based Cross-Country Comparisons Where Countries Vary in Sample Design: Issues and Solutions. Retrieved March 31, 2021, from https://sciendo.com/article/10.1515/jos-2017-0007\n",
+    "\n",
+    ">European Social Survey Cumulative File, ESS 1-9 (2020). Data file edition 1.1. NSD - Norwegian Centre for Research Data, Norway - Data Archive and distributor of ESS data for ESS ERIC.\n",
+    "\n",
+    ">International Standard Classification of Education (ISCED) - Statistics Explained. (2020). Retrieved from https://ec.europa.eu/eurostat/statistics-explained/index.php/International_Standard_Classification_of_Education_(ISCED)\n",
+    "\n",
+    ">CNN Editorial Research. (2021, January 14). European Debt Crisis Fast Facts. Retrieved from https://edition.cnn.com/2013/07/27/world/europe/european-debt-crisis-fast-facts/index.html\n",
+    "\n",
+    ">About Hungary - New labor program significantly cuts Hungary’s unemployment rate. (2019). Retrieved from http://abouthungary.hu/news-in-brief/new-labor-program-significantly-cuts-hungarys-unemployment-rate/\n",
+    "\n",
+    ">Logue, J. (2019). Trade unions in the Nordic countries. Retrieved from https://nordics.info/show/artikel/trade-unions-in-the-nordic-region/\n",
+    "\n",
+    ">K SHIN, Y. O. U. N. G., & BÖCKERMAN, P. E. T. R. I. (2020). Trade union-administered unemployment benefit and precarious workers in Finland. Retrieved from https://nordics.info/show/artikel/trade-union-administered-unemployment-benefit-and-precarious-workers-in-finland/\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "discrete-corporation",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1] ‘4.0.2’"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "getRversion()"
    ]
