Creating an HTML as project site

--- a/European-Voters-Analysis.ipynb
+++ b/European-Voters-Analysis.ipynb
@@ -6,9 +6,9 @@
    "id": "automotive-league",
    "metadata": {},
    "source": [
-    "# <p style=\"background-color:#003399; font-family:tahoma; font-size:120%; text-align:left; color:#FFCC00; padding: 15px 5px 15px 25px; border-radius: 15px;\">Examining factors that influence EU acceptance among European voters\n",
+    "# <p style=\"background-color:#003399; font-family:tahoma; font-size:120%; text-align:left; color:#FFCC00; padding: 15px 5px 15px 25px; border-radius: 15px;\">Examining factors that influence EU acceptance among European voters</p>\n",
     "    \n",
-    "## Would you vote for your country to leave or remain in the European Union?</p>"
+    "## Would you vote for your country to leave or remain in the European Union?"
    ]
   },
   {
@@ -901,7 +901,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "concrete-dominican",
+   "id": "final-update",
    "metadata": {},
    "outputs": [],
    "source": [
