--- a/European-Voters-Analysis.ipynb
+++ b/European-Voters-Analysis.ipynb
@@ -1,7 +1,16 @@
 {
  "cells": [
   {
-   "attachments": {},
+   "cell_type": "markdown",
+   "id": "nuclear-desire",
+   "metadata": {},
+   "source": [
+    "<img title=\"GitHub Octocat\" src=\"img/Octocat.jpg\" style=\"height: 60px; padding-right: 15px\" alt=\"Octocat\" align=\"left\"> This notebook is part of a GitHub repository: https://github.com/pessini/european-voters \n",
+    "<br>MIT Licensed\n",
+    "<br>Author: Leandro Pessini"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "automotive-league",
    "metadata": {},
@@ -73,9 +82,9 @@
    "id": "banned-solid",
    "metadata": {},
    "source": [
-    "This analysis will investigate a dataset provided by [European Social Survey (ESS)](https://www.europeansocialsurvey.org/) which is a cross-national survey of attitudes and behaviour from European citizens. The topics covered by ESS are very heterogeneous and include media and social trust, politics, immigration, citizen involvement, health and care, economic, work and well-being.\n",
+    "<img title=\"European Social Survey\" src=\"img/ess_logo.png\" alt=\"European Social Survey (ESS)\" align=\"right\"> This analysis will investigate a dataset provided by [European Social Survey (ESS)](https://www.europeansocialsurvey.org/) which is a cross-national survey of attitudes and behaviour from European citizens. The topics covered by ESS are very heterogeneous and include media and social trust, politics, immigration, citizen involvement, health and care, economic, work and well-being.\n",
     "\n",
-    "The analysis will focus on which aspects can influence a person to vote for their country to leave or remain a member of the European Union. The variables selected are mostly socio-demographic such as education, employment status and Union membership status.\n"
+    "The focus will be on which aspects can influence a person to vote for their country to leave or remain a member of the European Union. The variables selected are mostly socio-demographic such as education, employment status and Union membership status. \n"
    ]
   },
   {
@@ -1894,7 +1903,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "backed-trash",
    "metadata": {},
@@ -2097,23 +2105,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 74,
-   "id": "discrete-corporation",
+   "cell_type": "markdown",
+   "id": "comparative-fields",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1] ‘4.0.2’"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "getRversion()"
+    "<img title=\"GitHub Mark\" src=\"img/GitHub-Mark-64px.png\" style=\"height: 32px; padding-right: 15px\" alt=\"GitHub Mark\" align=\"left\"> [GitHub repository](https://github.com/pessini/european-voters) <br>Author: Leandro Pessini"
    ]
   }
  ],
